compiler/frontends/spar/testsuite/errjlsconv.spar
// After JLS2 5.2    Assignment Conversion


public class errjlsconv {
    public static void main(String[] args) {
        short s = 123;
        char c = s;                       // error: would require cast
        s = c;                            // error: would require cast
    }
}
